[package]
name = "key_registrator"
version = "0.1.2"
edition = "2021"

[features]
default = ["args"]
args = []

[dependencies]
windows-sys = {version = "0.59.0", features = ["Win32_UI_WindowsAndMessaging"]}
thiserror="2.0.11"
tokio = {version = "*", features = ["macros", "rt", "rt-multi-thread", "time", "sync"]}
logger = {git = "https://github.com/P40b0s/logger.git"}
futures = "*"
[dev-dependencies]
tokio-test = "*"